2005-08-12  Dan Winship  <danw@novell.com>

	* libsoup/soup-server.c (soup_server_get_listener): new method to
	get the server's listening socket.

	* libsoup/soup-socket.c: add a new "cloexec" property, to set
	FD_CLOEXEC on the socket. Update everything for that.

2005-08-05  Dan Winship  <danw@novell.com>

	* libsoup/soup-socket.c (finalize): Free priv->read_buf. From
	Tambet.
	(soup_socket_connect): Make sure that get_iochannel() gets called
	if the connect succeeds right away, or the socket will fail on
	the first read or write. [#312540]

2005-08-01  Dan Winship  <danw@novell.com>

	* configure.in: drop version back down to 2.2.5 and
	SOUP_API_VERSION back to 2.2; due to various snafus, there has
	never yet been an official release of the 2.4 API and the GNOME
	2.12 betas have been shipping with libsoup 2.2 tarballs (while
	jhbuild has been using 2.4, with evolution and related packages
	having configure hacks to build against either). As there never
	ended up being any API-incompatible changes in the 2.4 series, we
	can just merge it back into the 2.2 series and kill off 2.4.

	* NEWS: Copy in the 2.2-series news from the gnome-2-10 branch,
	and add new NEWS

	* libsoup-zip.in: s/2.2/@SOUP_API_VERSION@/

	* libsoup/Makefile.am (libsoupincludedir, lib_LTLIBRARIES,
	libsoup_2_2_la_LDFLAGS, libsoup_2_2_la_LIBADD,
	libsoup_2_2_la_SOURCES): s/4/2/ in all the places automake won't
	let us use a variable.

2005-08-01  Dan Winship  <danw@novell.com>

	* libsoup/soup-md5-utils.c (soup_md5_final_hex): Finalize a
	SoupMD5Context and write out the digest in hex digits.

	* libsoup/soup-auth-digest.c (authenticate, compute_response):
	* libsoup/soup-server-auth.c (check_digest_passwd): Use that,
	rather than duplicating the code in both places here.

	Patch from Wim Lewis.
	
2005-07-15  Dan Winship  <danw@novell.com>

	* libsoup/soup-session.c (redirect_handler): Allow relative URIs,
	since some servers are lame. Based on a patch from Jean-Yves
	Lefort. [#270688]
