@@ -303,9 +303,12 @@ soup_server_get_protocol (SoupServer *server)
 SoupSocket *
 soup_server_get_listener (SoupServer *server)
 {
+	SoupServerPrivate *priv;
+
 	g_return_val_if_fail (SOUP_IS_SERVER (server), NULL);
-	
-	return server->priv->listen_sock;
+	priv = SOUP_SERVER_GET_PRIVATE (server);
+
+	return priv->listen_sock;
 }
 
 static void start_request (SoupServer *, SoupSocket *);
